--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,9 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  flex-direction: column;
+  display: flex;
+  justify-content: center;
 }
 
 .logo {
