--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,11 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 #root {
   max-width: 100%;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
   flex-direction: column;
   display: flex;
